fixed body overflow

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -13,11 +13,11 @@
 button:focus{outline:none;}
 
 // 02. Basic Body Styles
-html{height:100%;}
+html{min-height:100%;}
 body{
   font-family:$regular;
   width:100%;
-  height:100%;
+  min-height:100%;
   //overflow:hidden;
 }
 h1, h2, h3, h4, h5, h6{
