--- a/sass/_theGoodStuff.scss
+++ b/sass/_theGoodStuff.scss
@@ -8,6 +8,7 @@
 body{
   font-family:$regular;
   background:$yellow;
+  box-shadow:inset darken($yellow,15%) 0 0 15em 2em;
 }
 header{
   text-transform:uppercase;
@@ -28,7 +29,7 @@ header{
   width:80%;
   max-width:40em;
   margin:0 auto;
-  min-height:40em;
+  min-height:60em;
   // The "In" and "Out" buttons
   .buttons{
     width:50%;
